[fix] fixing release system, so that it works with minor setup for students.
going with a pure Intellij setup, no maven